--- a/_posts/2015-02-04-jobs-5.md
+++ b/_posts/2015-02-04-jobs-5.md
@@ -1,13 +1,17 @@
 ---
 layout: post
-title : We're Recruiting
-tags : News
-categories : [news, job]
+title: "We're Recruiting"
+tags: News
+categories: 
+  - news
+  - job
 summary: We are currently recruiting for a Marketing/Business Development Executive.
-contains_pdf: yes
-pdf_name:  JS BD Marketing
-job: yes
+contains_pdf: "yes"
+pdf_name: JS BD Marketing
+job: "yes"
+published: false
 ---
+
 We are currently recruiting for a Marketing/Business Development Executive. 
 
 The person we want should be calm under pressure and be able to juggle & prioritise their workload, be personable and confident, and not be afraid of being thrown in the deep end and working with some very unique personalities! 
