--- a/_posts/2015-02-04-jobs-5.md
+++ b/_posts/2015-02-04-jobs-5.md
@@ -9,7 +9,7 @@ summary: We are currently recruiting for a Marketing/Business Development Execut
 contains_pdf: "yes"
 pdf_name: JS BD Marketing
 job: "yes"
-published: false
+published: true
 ---
 
 We are currently recruiting for a Marketing/Business Development Executive. 
