--- a/_posts/2015-04-22-no-1.md
+++ b/_posts/2015-04-22-no-1.md
@@ -6,7 +6,7 @@ tags: News
 categories: 
   - news
   - job
-summary: We are currently recruiting for a Marketing/Business Development Executive.
+summary: We are currently not recruiting for a Marketing/Business Development Executive.
 contains_pdf: "yes"
 pdf_name: JS BD Marketing
 job: "yes"
