--- a/_posts/2015-04-22-testing.md
+++ b/_posts/2015-04-22-testing.md
@@ -1,5 +1,5 @@
 ---
-published: false
+published: true
 title: Testing
 layout: post
 contains_pdf: "no"
@@ -12,5 +12,3 @@ tags: "jobs, cwp, tjings"
 ---
 
 ##This is testing v1
-
-
