--- a/_posts/2015-04-22-testing.md
+++ b/_posts/2015-04-22-testing.md
@@ -4,7 +4,7 @@ title: Testing
 layout: post
 contains_pdf: "no"
 direct_link: "no"
-summary: This is a testing post
+summary: Carry on Testing
 categories: 
   - job
   - news
@@ -13,4 +13,4 @@ tags: "jobs, cwp, tjings"
 
 ##This is testing v1
 
-Carry on testing
+Carry on testing 
