--- a/_posts/2015-04-22-testing.md
+++ b/_posts/2015-04-22-testing.md
@@ -5,9 +5,7 @@ layout: post
 contains_pdf: "no"
 direct_link: "no"
 summary: Carry on Testing
-categories: 
-  - job
-  - news
+categories: ""
 tags: "jobs, cwp, tjings"
 ---
 
