--- a/_posts/2015-04-22-testing.md
+++ b/_posts/2015-04-22-testing.md
@@ -5,7 +5,9 @@ layout: post
 contains_pdf: "no"
 direct_link: "no"
 summary: Carry on Testing
-categories: ""
+categories: 
+  - job
+  - news
 tags: "jobs, cwp, tjings"
 ---
 
