--- a/_posts/2015-04-27-testing.md
+++ b/_posts/2015-04-27-testing.md
@@ -12,4 +12,4 @@ tags: jobs
 
 ## A New Post
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+This is a testing post - the content
